# blog-engine

./: README.md
backend/: .gitignore  Cargo.toml  README.md
backend/src/: main.rs
backend/src/auth/: mod.rs
backend/src/controller/: login_controller.rs  mod.rs  posts_controller.rs
backend/src/db/: mod.rs
backend/src/model/: comment.rs  mod.rs  post.rs  requests.rs  rights.rs  user.rs
backend/src/repository/: comments_repository.rs  mod.rs  posts_repository.rs  user_repository.rs
backend/src/service/: comments_service.rs  mod.rs  posts_service.rs  user_service.rs
frontend/: README.md  package-lock.json
frontend/frontend/: package-lock.json  package.json
frontend/frontend/public/: index.html
frontend/frontend/src/: App.js  Blog.js  Contact.js  Home.js  Login.js  Logout.js  NewPost.js  Post.js  index.css
frontend/src/: App.js  Blog.js  Login.js  NewPost.js  Post.js  index.css  index.js
