[package]
name = "backend"
version = "0.1.0"
authors = ["Hubert Jaremko <hjaremko@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.8"
rocket_contrib = "0.4.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.7.2"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]
